# kaggle-house-prices

./: .gitignore  main.py  pyproject.toml  submit.csv
data/: coef.csv
notebooks/: add_features.py  baseline.ipynb  feature_engineering.ipynb  sandbox.ipynb
notebooks/ref-notes/: comprehensive-data-exploration-with-python_jp.ipynb
